...
                                </constraints>
                                <textInputTraits key="textInputTraits"/>
                            </searchBar>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jXE-QY-iZE">
                                <rect key="frame" x="0.0" y="183" width="414" height="679"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Results Found" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ArP-IE-GiI">
                                        <rect key="frame" x="116" y="315" width="182" height="29"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
...
                                    <constraint firstItem="ArP-IE-GiI" firstAttribute="centerX" secondItem="jXE-QY-iZE" secondAttribute="centerX" id="z98-cq-ELC"/>
                                </constraints>
                            </view>
                            <navigationBar contentMode="scaleToFill" largeTitles="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Jid-Bt-EFg">
                                <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                                <items>
                                    <navigationItem title="Directory" id="uH7-Yd-uBF">
                                        <barButtonItem key="rightBarButtonItem" title="Sort" id="cG3-j4-Jmn">
                                            <connections>
                                                <action selector="buttonPressed:" destination="BYZ-38-t0r" id="DrO-GM-bg1"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
...
